--- a/templates/commande/editcommande.html.twig
+++ b/templates/commande/editcommande.html.twig
@@ -97,7 +97,7 @@
                                     </style>
                                     <div class="col-md-12 form-group p_star d-flex justify-content-center">
                                     <div class="button-container">
-                                    {{ form_widget(formAdd.Checkout, {'attr': {'class': 'btn btn-sm btn-primary genric-btn danger circle arrow' } }) }}
+                                    {{ form_widget(formAdd.Valider, {'attr': {'class': 'btn btn-sm btn-primary genric-btn danger circle arrow' } }) }}
                                     
                                     </div>
                                     </div>
