--- a/templates/produit/editproduit.html.twig
+++ b/templates/produit/editproduit.html.twig
@@ -15,7 +15,7 @@
                             <nav>                                                
                                 <ul id="navigation">  
                                     <li><a href="{{path('app_home')}}">Acceuil</a></li>
-                                    <li><a href="{{path('app_magasin')}}">Magasin</a>
+                                    <li><a href="{{path('app_produit')}}">Magasin</a>
                                         <ul class="submenu">
                                             <li><a href="{{path('app_homme')}}">Homme</a></li>
                                             <li><a href="{{path('app_femme')}}">Femme</a></li>
