--- a/templates/produit/showproduit.html.twig
+++ b/templates/produit/showproduit.html.twig
@@ -29,9 +29,7 @@
                                     <li><a href="{{path('app_home')}}">Acceuil</a></li>
                                     <li><a href="{{path('app_produit')}}">Magasin</a>
                                         <ul class="submenu">
-                                            <li><a href="{{path('app_homme')}}">Homme</a></li>
-                                            <li><a href="{{path('app_femme')}}">Femme</a></li>
-                                            <li><a href="{{path('app_enfant')}}">Enfant</a></li>
+                                            <li><a href="{{path('favoris')}}">Liste de mes produits favoris</a></li>   
                                         </ul> 
                                     </li>
                                     <li><a href="about.html">A propos</a></li>
@@ -60,7 +58,13 @@
                                     </div>
                                 </li>
                                 <li> <a href="login.html"><span class="flaticon-user"></span></a></li>
-                                <li><a href="{{path('app_panier')}}"><span class="flaticon-shopping-cart"></span></a> </li>
+                                <li><a href="{{path('app_panier')}}"><span class="flaticon-shopping-cart">
+                                    {% if app.session.get('cart') %}
+                                    {{ app.session.get('cartData').data.quantityCart }}
+                                    {% else %}
+                                        0   
+                                    {%endif %}
+                                </span></a> </li>
                             </ul>
                         </div>
                     </div>
@@ -77,145 +81,80 @@
         <!-- Latest Products Start -->
         <section class="popular-items">
             <div class="container">
-                <div class="row product-btn justify-content-between mb-30">
-                    <div class="properties__button">
-                        <!--Nav Button  -->
-                        <!--
-                        <nav>                                                      
-                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">NewestArrivals</a>
-                                <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"> Price high to low</a>
-                                <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"> Most populer </a>
-                            </div>
-                        </nav>
-                        -->
-                        <!--End Nav Button  -->
-                    </div>
-                    <!-- Grid and List view -->
-                </div>
-                <div class="d-flex justify-content-between mt-10" style="padding-bottom: 20px;">
-    <div>
-        <h6>Acceuil > Magasin > All</h6>
-    </div>
-    <div>
-        <a href="{{ path('app_addproduit') }}" class="genric-btn danger circle">Vendre un produit</a>
-    </div>
-</div>
 
-<div class="text-right mt-3">
-    <a href="{{ path('app_afficherproduit') }}" class="genric-btn danger circle">Liste de mes produits</a>
-</div>
-            <div class="row">
-            <h3 class="mb-30">Filtrer Par :</h3>
-            <div class="d-flex">
-                <div class="single-element-widget mt-30" style="margin-left: 20px;">
-                <div class="default-select" id="default-select">
-                     <style>
-                                .small-button {
-                                    padding: 0.25rem 0.5rem;
-                                    font-size: 0.875rem;
-                                    line-height: 1.5;
-                                    border-radius: 0.2rem;
-                                }
-                                </style>
-                    <div class="input-group-icon mt-10">
-                    <div class="icon"><i aria-hidden="true"></i></div>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary small-button dropdown-toggle" type="button" id="categoryDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Categorie
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="categoryDropdown">
-                        <a class="dropdown-item" href="#">Robe</a>
-                        <a class="dropdown-item" href="#">Pull</a>
-                        <a class="dropdown-item" href="#">Veste</a>
-                        <a class="dropdown-item" href="#">Pantalon</a>
-                        <a class="dropdown-item" href="#">Chaussure</a>
-                        <a class="dropdown-item" href="#">Short</a>
-                        <a class="dropdown-item" href="#">Monteau</a>
-                        </div>
-                    </div>
-                    </div>
+                <h6>Acceuil > Magasin > All</h6>
+                    
+                <div class="d-flex justify-content-end" style="padding-bottom: 20px;">
+                    <a href="{{ path('app_addproduit') }}" class="genric-btn circle mr-2" style="background-color: red; color: white;">Vendre un produit</a>
+                    <a href="{{ path('app_afficherproduit') }}" class="genric-btn circle" style="background-color: red; color: white;">Liste de mes produits</a>
                 </div>
-                </div>
-                <div class="single-element-widget mt-30" style="margin-left: 20px;">
-                <div class="default-select" id="default-select">
-                    <style>
-                                .small-button {
-                                    padding: 0.25rem 0.5rem;
-                                    font-size: 0.875rem;
-                                    line-height: 1.5;
-                                    border-radius: 0.2rem;
-                                }
-                                </style>
-                    <div class="input-group-icon mt-10">
-                    <div class="icon"><i aria-hidden="true"></i></div>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary small-button dropdown-toggle" type="button" id="sizeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Taille
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="sizeDropdown">
-                        <a class="dropdown-item" href="#">XS</a>
-                        <a class="dropdown-item" href="#">S</a>
-                        <a class="dropdown-item" href="#">M</a>
-                        <a class="dropdown-item" href="#">L</a>
-                        <a class="dropdown-item" href="#">XL</a>
-                        <a class="dropdown-item" href="#">XXL</a>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                </div>
-                <div class="single-element-widget mt-30" style="margin-left: 20px;">
-                <div class="default-select" id="default-select">
-                    <style>
-                                .small-button {
-                                    padding: 0.25rem 0.5rem;
-                                    font-size: 0.875rem;
-                                    line-height: 1.5;
-                                    border-radius: 0.2rem;
-                                }
-                                </style>
-                    <div class="input-group-icon mt-10">
-                    <div class="icon"><i aria-hidden="true"></i></div>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary small-button dropdown-toggle" type="button" id="stateDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Etat
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="stateDropdown">
-                        <a class="dropdown-item" href="#">Neuf</a>
-                        <a class="dropdown-item" href="#">Comme Neuf</a>
-                        <a class="dropdown-item" href="#">Utiliser</a>
-                        </div>
-                    </div>
-                    </div>
-                </div>
+                <form action="{{ path('app_produit') }}" method="GET" style="margin-bottom: 20px;">
+                <input type="text" name="marque" placeholder="Rechercher par marque..." style="padding: 10px; border: 1px solid #ccc; border-radius: 5px; margin-right: 10px; width: 200px; font-size: 13px;">
+                <button type="submit" style="padding: 10px 20px; background-color: f2f2f2; color: black; border: none; border-radius: 5px; cursor: pointer; font-size: 13px;">Rechercher</button>
+            </form>
+            <form action="{{ path('app_produit') }}" method="GET">
+        <div class="row">
+        <h3 class="mb-30">Filtrer Par :</h3>
+        <div class="d-flex">
+            <div class="single-element-widget mt-10" style="margin-left: 20px;">
+            
+                <select name="type">
+                    <option value="">Types</option>
+                    <option value="pull">Pull</option>
+                    <option value="veste">Veste</option>
+                    <option value="pantalon">Pantalon</option>
+                    <option value="chaussure">Chaussure</option>
+                </select>
+            </div>
+            <div class="single-element-widget mt-10" style="margin-left: 20px;">
+                <select name="taille">
+                    <option value="">Tailles</option>
+                    <option value="XS">XS</option>
+                    <option value="S">S</option>
+                    <option value="M">M</option>
+                    <option value="L">L</option>
+                    <option value="XL">XL</option>
+                    <option value="XXL">XXL</option>
+                </select>
+            </div>
+            <div class="single-element-widget mt-10" style="margin-left: 20px;">
+                <select name="etat" >
+                    <option value="">Etats</option>
+                    <option value="Neuf">Neuf</option>
+                    <option value="Comme Neuf">Comme Neuf</option>
+                    <option value="Utilisé">Utilisé</option>
+                </select>
+            </div>
+            <div class="single-element-widget mt-10" style="margin-left: 20px;">
+                <button type="submit"  style="padding: 8px 30px; background-color: #f2f2f2; color: black; border: none; border-radius: 20px; cursor: pointer; font-size: 12px;">Filtrer</button>
+            </div>
                 </div>
             </div>
-            </div>
+            </form>
                 <!-- Nav Card -->
                 <div class="tab-content mt-30" id="nav-tabContent">
                     <!-- card one -->
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                         <div class="row">
                         {% for produit in produits %}
-                            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-md-4">
                                 <div class="single-popular-items mb-50 text-center">
-                                    <div class="popular-img">    <!-- 362*373 -->
+                                    <div class="popular-img">
+                                        <div class="favorit-items">
+                                            <a href="{{ path('add_to_favorites', {'id': produit.id}) }}">
+                                                <span class="flaticon-heart" style="{% if produit.id in favoris %}color: red;{% endif %}"></span>
+                                            </a>
+                                        </div> <!-- 362*373 -->
                                 {% if produit.image %}
-                                    <img src="{{ asset('imgproduit/' ~ produit.image) }}" alt="user-avatar" class="img-circle img-fluid mx-auto" style="width: 200px;">
+                                    <img src="{{ asset('imgproduit/' ~ produit.image) }}" alt="user-avatar" class="img-circle img-fluid mx-auto" style="width: 215px; height: 250px;">
                                 {% endif %}
                                         <div class="img-cap">
-                                            <span><a href="{{path('app_panier')}}">Ajouter au panier</a></span>
-                                        </div>
-                                        <div class="favorit-items">
-                                            <span class="flaticon-heart"></span>
+                                            <span><a href="{{ path('cartAdd', {'id':produit.id})}}">Ajouter au panier</a> | <a href="{{ path('app_details_produit', {'id': produit.id}) }}">Détails</a></span>
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">{{produit.description}}</a></h3>
-                                        <span>{{produit.prix}} DT</span>
-                                         <!-- Ajout du bouton de détails -->
-                            <a href="{{ path('app_details_produit', {'id': produit.id}) }}" class="btn btn-primary">Détails</a>
+                                        <h3><a href="product_details.html">{{produit.nom}}</a></h3>
+                                        <span>{{produit.prix}} DT</span>                           
                                     </div>
                                     
                                 </div>
